# esp-SoCurity

./: CHANGES.txt  FPGA_EXECUTION_GUIDE.txt  bg100ms_3f1_3v_dos_rv2_vfrac5_n1_l0_w50_s300_01.csv
background_monitor/: Makefile  background_monitor.c
data_collector/: Makefile  collect_esp_monitors.c
mini-era-integration/: build_mini_era.sh  deploy_to_fpga.sh  dos_world.desc  run_dos_attack.sh  run_normal_baseline.sh
ocsvm_baremetal/: CMakeLists.txt  Makefile  crt0.S  export_model.py  link.ld  ocsvm_baremetal.c  ocsvm_baremetal.elf  ocsvm_fw_image.h  ocsvm_inference.h  ocsvm_model.h  ocsvm_platform.h
scripts/socurity/: preflight.sh
xheep_loader/: Makefile  xheep_loader.c
